# rust_exercise

./: Cargo.toml  README.md
src/: main.rs
src/api/: hello.rs
src/handlers/: hello_handlers.rs  mod.rs
src/models/: models.rs
src/routes/: hello_route.rs
